--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "clean-css": "^4.1.11",
@@ -17,6 +18,7 @@
     "sequelize": "^5.11.0"
   },
   "devDependencies": {
+    "mocha": "^6.2.0",
     "tedious": "^6.2.0"
   }
 }
