--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
     "pug": "^2.0.4",
     "request": "^2.88.0",
     "sequelize": "^5.11.0",
